# Read_image_openCv

./: CMakeCache.txt  CMakeLists.txt  LICENSE  LeerImagen  Makefile  README.md  cmake_install.cmake  programa1.cpp  programa1.cpp~  programaReadImagen.cpp  varios.h
